--- a/resources/themes/theme_aster/public/assets/css/style.css
+++ b/resources/themes/theme_aster/public/assets/css/style.css
@@ -576,6 +576,7 @@ a,
 
 .list-separator {
     --padding-inline: 1.25rem;
+    padding: 0px 10px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -585,7 +586,8 @@ a,
 }
 
 .list-separator > li {
-    padding-inline: var(--padding-inline);
+    /* padding-inline: var(--padding-inline); */
+    padding: 0px 10px;
 }
 
 .list-separator > li:last-child {
@@ -598,7 +600,7 @@ a,
 }
 
 .list-separator > li:not(:last-child):after {
-    position: absolute;
+    /* position: absolute; */
     inset-block-start: 50%;
     inset-inline-end: 0rem;
     -webkit-transform: translateY(-50%);
@@ -607,7 +609,7 @@ a,
     inline-size: 0.0625rem;
     block-size: 1.375rem;
     background-color: rgba(185, 185, 185, 0.5);
-    content: "";
+    /* content: ""; */
 }
 
 @media only screen and (max-width: 1199px) {
@@ -1949,7 +1951,7 @@ input:-webkit-autofill:active {
     position: absolute;
     inset-inline-end: -0.625rem;
     inset-block-start: -0.5rem;
-    background-color: var(--bs-primary);
+    background-color: #db4444;
     color: var(--absolute-white);
     font-size: 0.625rem;
     inline-size: 1.0625rem;
@@ -3064,6 +3066,11 @@ input[type="checkbox"]:checked::after {
 
 .main-menu a {
     font-size: 0.8125rem;
+    text-transform: capitalize !important
+}
+
+.main-menu a:hover{
+    text-decoration: underline;
 }
 
 .main-menu .has-sub-item {
@@ -4851,3 +4858,24 @@ input[type="checkbox"]:checked::after {
 /*.find-what-you-need-items > a:last-child .text-truncate {*/
 /*    --width: 20ch;*/
 /*}*/
+
+    .header-main.love-sticky {
+        border-bottom: 1px solid #d9d9d9;
+        box-shadow: none;
+    }
+
+    .header-top span {
+        font-size: 11px;
+        text-align: center;
+        justify-content: center;
+        margin: 0 auto;
+    }
+
+    .header-top span a {
+        font-weight: 700;
+        text-decoration: underline;
+    }
+
+    .nav {
+        height: 20px;
+    }
