--- a/public/assets/front-end/css/theme.css
+++ b/public/assets/front-end/css/theme.css
@@ -14180,7 +14180,7 @@ a.nav-link:hover .media-tab-media {
 
 .navbar-tool .navbar-tool-label {
     position: absolute;
-    top: -0.3125rem;
+    top: -0.3125rm;
     right: -0.3125rem;
     width: 1.25rem;
     height: 1.25rem;
